--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container-fluid bg-light p-5 text-center my-3">
         <h1 class="">Covid-19 Tracker</h1>
-        <h5 class="text-muted"><a href="/index.php">Visit Covid Tracker!</a></h5>
+        <h5 class="text-muted"><a href="/ind.php">Visit Covid Tracker!</a></h5>
     </div>
     </body>
     </html>
